# UC407-Insurance-Fraud-Detection-Using-Image-Analysis

./: .replit  fraud_detection.db  main.py  pyproject.toml
attached_assets/: Pasted-Title-AI-Powered-Insurance-Fraud-Detection-Using-Image-Analysis-Description-Build-an-AI-ML-app-1755858280001_1755858280004.txt
templates/: index.html
